--- a/love.html
+++ b/love.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<!--i love xia-->
+		<!--i love xiazuzu-->
 		<!--<meta name="viewport"123 content="width=1000px,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no" />-->
 		<title>3D爱心</title>
 		<!--
